MicroTodoUI/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui
spec:
  type: LoadBalancer
  selector:
    app: todo-ui
  ports:
    - port: 80
      targetPort: 80
