MicroTodoUI/manifests/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind:  Ingress
metadata:
  name:  ingress-todo-ui
  labels:
    app:  todo-ui
spec:  
  ingressClassName:  azure-application-gateway
  rules:
  - host: todoui.techno028.shop
    http:
     paths:
      - pathType: Prefix
        path: "/"   
        backend:
          service:
            name: todo-ui
            port: 
              number: 80
